tests/parser/fail/self-param-bin.som
"test:
fail-message:
  - contains: define
  - contains: self
"

SelfParamBin = (
  / self = ('rip')
)
